Fixed friend component mobile layout issues and methods added for input field verification

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -389,6 +389,7 @@ body > #root{
                                         margin: 15px 0; 
                                         padding-left: 10px;
                                         font-size: 12px;
+                                        width: 50%;
                                         .friend-name {
                                             font-size: 16px;
                                         }
